conduit-mirage: support dual IPv4 and IPv6 stack

--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -25,6 +25,7 @@ depends: [
   "tcpip"
   "mirage-flow"
   "mirage-time"
+  "mirage-stack" {>= "2.2.0"}
   "dns-client"  {>= "4.6.0"}
   "ke"
   "bigstringaf"
