--- a/src/lwt-tls/dune
+++ b/src/lwt-tls/dune
@@ -1,4 +1,4 @@
 (library
  (name conduit_lwt_tls)
  (public_name conduit-lwt-tls)
- (libraries conduit-lwt conduit-tls))
+ (libraries conduit-lwt conduit-tls mirage-crypto-rng.lwt))
