Add an ocamldoc's HOW-TO about Conduit

--- a/src/core/dune
+++ b/src/core/dune
@@ -2,3 +2,7 @@
  (name conduit)
  (public_name conduit)
  (libraries stdlib-shims ipaddr domain-name))
+
+(documentation
+ (package conduit)
+ (mld_files index))
