--- a/conduit-async-tls.opam
+++ b/conduit-async-tls.opam
@@ -11,20 +11,19 @@ tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
-synopsis: "A network connection establishment library for Async"
+synopsis: "A network connection establishment library using Async and ocaml-tls"
 
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
-  ["dune" "runtest" "-j1"] {with-test}
+  ["dune" "runtest" "-p" name "-j1"] {with-test}
 ]
 
 depends: [
-  "ocaml" {>= "4.03.0"}
-  "dune"
+  "ocaml"         {>= "4.07.0"}
+  "dune"          {>= "2.0.0"}
   "core"
-  "conduit-async"
-  "async" {>= "v0.12.0"}
-  "conduit-tls"
-  "stdlib-shims" {with-test}
+  "conduit-async" {= version}
+  "async"         {>= "v0.12.0"}
+  "conduit-tls"   {= version}
 ]
