--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -5,26 +5,33 @@ authors: [
   "Thomas Leonard" 
   "Thomas Gazagnaire" 
   "Rudi Grinberg"
+  "Romain Calascibetta"
 ]
 license: "ISC"
 tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
-synopsis: "A network connection establishment library for Async"
+synopsis: "A portable network connection establishment library using Async"
 
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
-  ["dune" "runtest" "-j1"] {with-test}
+  ["dune" "runtest" "-p" name "-j1"] {with-test}
 ]
 
 depends: [
-  "ocaml" {>= "4.03.0"}
-  "dune"
+  "ocaml"             {>= "4.07.0"}
+  "dune"              {>= "2.0.0"}
   "core"
-  "conduit"
-  "async" {>= "v0.12.0"}
+  "conduit"           {= version}
+  "async"             {>= "v0.12.0"}
   "cstruct"
-  "stdlib-shims" {with-test}
+  "base-bigarray"     {with-test}
+  "bigstringaf"       {with-test}
+  "ke"                {with-test}
+  "fmt"               {with-test}
+  "rresult"           {with-test}
+  "conduit-async-tls" {with-test}
+  "conduit-async-ssl" {with-test}
 ]
