--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -17,13 +17,21 @@ synopsis: "A portable network connection establishment library using Lwt"
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
-  ["dune" "runtest" "-j1"] {with-test}
+  ["dune" "runtest" "-p" name "-j1"] {with-test}
 ]
 
 depends: [
-  "ocaml" {>= "4.07.0"}
-  "dune"
-  "conduit"
+  "ocaml"           {>= "4.07.0"}
+  "dune"            {>= "2.0.0"}
+  "conduit"         {= version}
+  "cstruct"
   "lwt"
   "base-unix"
+  "base-bigarray"   {with-test}
+  "bigstringaf"     {with-test}
+  "ke"              {with-test}
+  "fmt"             {with-test}
+  "rresult"         {with-test}
+  "conduit-lwt-tls" {with-test}
+  "conduit-lwt-ssl" {with-test}
 ]
