--- a/conduit.opam
+++ b/conduit.opam
@@ -13,39 +13,20 @@ homepage: "https://github.com/mirage/ocaml-conduit"
 doc: "https://mirage.github.io/ocaml-conduit/"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
-synopsis: "A network connection establishment library"
-description: """
-The `conduit` library takes care of establishing and listening for 
-TCP and SSL/TLS connections for the Lwt and Async libraries.
-
-The reason this library exists is to provide a degree of abstraction
-from the precise SSL library used, since there are a variety of ways
-to bind to a library (e.g. the C FFI, or the Ctypes library), as well
-as well as which library is used (just OpenSSL for now).
-
-By default, OpenSSL is used as the preferred connection library, but
-you can force the use of the pure OCaml TLS stack by setting the
-environment variable `CONDUIT_TLS=native` when starting your program.
-
-The useful opam packages available that extend this library are:
-
-- `conduit`: the main `Conduit` module
-- `conduit-lwt`: the portable Lwt implementation
-- `conduit-lwt-unix`: the Lwt/Unix implementation
-- `conduit-async` the Jane Street Async implementation
-- `conduit-mirage`: the MirageOS compatible implementation
-"""
+synopsis: "A portable network connection establishment library"
 
 build: [
   ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
+  ["dune" "runtest" "-p" name] {with-test}
 ]
 
 depends: [
-  "ocaml" {>= "4.07.0"}
-  "dune"
+  "ocaml"        {>= "4.07.0"}
+  "dune"         {>= "2.0.0"}
   "ipaddr"
   "domain-name"
   "stdlib-shims"
-  "alcotest" {with-test}
+  "alcotest"     {with-test}
+  "rresult"      {with-test}
 ]
