--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -32,6 +32,6 @@ depends: [
   "ke"              {with-test}
   "fmt"             {with-test}
   "rresult"         {with-test}
-  "conduit-lwt-tls" {with-test}
-  "conduit-lwt-ssl" {with-test}
+  "conduit-lwt-tls" {with-test & post}
+  "conduit-lwt-ssl" {with-test & post}
 ]
