--- a/conduit-async-tls.opam
+++ b/conduit-async-tls.opam
@@ -26,4 +26,5 @@ depends: [
   "conduit-async" {= version}
   "async"         {>= "v0.12.0"}
   "conduit-tls"   {= version}
+  "mirage-crypto-rng" {>= "0.8.0"}
 ]
