Bind a protocol when we register a service to be able to abstract the protocol as a Conduit.flow

--- a/src/core/dune
+++ b/src/core/dune
@@ -1,7 +1,7 @@
 (library
  (name conduit)
  (public_name conduit)
- (libraries stdlib-shims ipaddr domain-name))
+ (libraries stdlib-shims logs ipaddr domain-name))
 
 (documentation
  (package conduit)
