--- a/src/mirage/dune
+++ b/src/mirage/dune
@@ -2,13 +2,13 @@
  (name conduit_mirage)
  (public_name conduit-mirage)
  (modules conduit_mirage)
- (libraries cstruct conduit lwt))
+ (libraries mirage-flow ke cstruct conduit lwt))
 
 (library
  (name conduit_mirage_tcp)
  (public_name conduit-mirage.tcp)
  (modules conduit_mirage_tcp)
- (libraries logs mirage-stack bigstringaf ke tcpip.tcp conduit-mirage))
+ (libraries logs mirage-stack tcpip.tcp conduit-mirage))
 
 (library
  (name conduit_mirage_dns)
