--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,11 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        ocaml-version: [ '4.08.1', '4.09.0', '4.10.0' ]
-        operating-system: [macos-latest, ubuntu-latest, windows-latest]
+        ocaml-version: [ '4.08.1', '4.09.0', '4.10.0', '4.11.1' ]
+        operating-system: [ ubuntu-latest ]
     steps:
-    - uses: actions/checkout@master
-    - uses: avsm/setup-ocaml@master
+    - uses: actions/checkout@v2
+    - uses: avsm/setup-ocaml@v1
       with:
         ocaml-version: ${{ matrix.ocaml-version }}
     - name: Deps
@@ -21,8 +21,8 @@ jobs:
         opam pin add -n conduit-async.dev .
         opam pin add -n conduit-mirage.dev .
         opam depext -y conduit conduit-lwt conduit-lwt-unix conduit-async conduit-mirage
-        opam install --deps-only .
+        opam install --deps-only -t .
     - name: Build
       run: opam exec -- dune build
     - name: Test
-      run: opam exec -- dune runtest
+      run: opam exec -- dune runtest --no-buffer --verbose -j 1
