--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -11,7 +11,9 @@ depends: [
   "ocaml" {>= "4.03.0"}
   "dune"
   "core"
-  "ppx_sexp_conv" {>="v0.9.0"}
+  "uri" {>= "4.0.0"}
+  "ppx_here" {>= "v0.9.0"}
+  "ppx_sexp_conv" {>="v0.13.0"}
   "sexplib"
   "conduit" {=version}
   "async" {>= "v0.10.0"}
