--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -11,7 +11,8 @@ depends: [
   "ocaml" {>= "4.07.0"}
   "dune"
   "base-unix"
-  "ppx_sexp_conv" {>="v0.12.0"}
+  "logs"
+  "ppx_sexp_conv" {>="v0.13.0"}
   "conduit-lwt" {=version}
   "lwt" {>= "3.0.0"}
   "uri" {>= "1.9.4"}
