--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -8,8 +8,9 @@ bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.07.0"}
   "dune"
-  "ppx_sexp_conv" {>="v0.12.0"}
+  "ppx_sexp_conv" {>="v0.13.0"}
   "sexplib"
+  "uri" {>= "4.0.0"}
   "cstruct" {>= "3.0.0"}
   "mirage-stack" {>= "2.0.0"}
   "mirage-clock" {>= "3.0.0"}
