--- a/lwt/dune
+++ b/lwt/dune
@@ -1,7 +1,8 @@
 (library
-  (name        conduit_lwt)
-  (public_name conduit-lwt)
-  (preprocess  (pps ppx_sexp_conv))
-  (wrapped     false)
-  (modules     resolver_lwt)
-  (libraries   conduit lwt))
+ (name conduit_lwt)
+ (public_name conduit-lwt)
+ (preprocess
+  (pps ppx_sexp_conv))
+ (wrapped false)
+ (modules resolver_lwt)
+ (libraries conduit lwt))
