--- a/src/conduit-lwt-unix/dune
+++ b/src/conduit-lwt-unix/dune
@@ -24,7 +24,17 @@
    (lwt_ssl -> conduit_lwt_unix_ssl.real.ml)
    (-> conduit_lwt_unix_ssl.dummy.ml))
   (select
+   conduit_lwt_unix_ssl.mli
+   from
+   (lwt_ssl -> conduit_lwt_unix_ssl.real.mli)
+   (-> conduit_lwt_unix_ssl.dummy.mli))
+  (select
    conduit_lwt_tls.ml
    from
    (tls.lwt -> conduit_lwt_tls.real.ml)
-   (-> conduit_lwt_tls.dummy.ml))))
+   (-> conduit_lwt_tls.dummy.ml))
+  (select
+   conduit_lwt_tls.mli
+   from
+   (tls.lwt -> conduit_lwt_tls.real.mli)
+   (-> conduit_lwt_tls.dummy.mli))))
