--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -24,6 +24,7 @@ depends: [
   "xenstore"
   "tls" {>= "0.11.0"}
   "tls-mirage" {>= "0.11.0"}
+  "ca-certs-nss"
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
 ]
