--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -6,7 +6,7 @@ tags: "org:mirage"
 homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
-  "ocaml" {>= "4.07.0"}
+  "ocaml" {>= "4.08.0"}
   "dune"
   "ppx_sexp_conv" {>="v0.13.0"}
   "sexplib"
@@ -19,7 +19,7 @@ depends: [
   "mirage-random" {>= "2.0.0"}
   "mirage-time" {>= "2.0.0"}
   "dns-client" {>= "4.5.0"}
-  "conduit-lwt"
+  "conduit-lwt" {=version}
   "vchan" {>= "5.0.0"}
   "xenstore"
   "tls" {>= "0.11.0"}
