--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -19,7 +19,7 @@ depends: [
   "mirage-random" {>= "2.0.0"}
   "mirage-time" {>= "2.0.0"}
   "dns-client" {>= "4.5.0"}
-  "conduit-lwt"
+  "conduit-lwt" {=version}
   "vchan" {>= "5.0.0"}
   "xenstore"
   "tls" {>= "0.11.0"}
