--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -18,6 +18,7 @@ depends: [
   "conduit" {=version}
   "async" {>= "v0.10.0"}
   "ipaddr" {>= "3.0.0"}
+  "ipaddr-sexp" {>= "4.0.0"}
 ]
 depopts: ["async_ssl"]
 conflicts: [
