--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -39,7 +39,7 @@ build: [
   ["dune" "runtest" "-p" name] {with-test}
 ]
 pin-depends: [
-  "dns-client" "git+https://github.com/mirage/ocaml-dns.git#cfec9fe8237d6c4b6e8465f5fbc3781ee0a0b7f5"
+  "dns-client.5.0.0" "git+https://github.com/mirage/ocaml-dns.git#29168a8c464796fda77b50d721176f122ee724ae"
 ]
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
 synopsis: "A network connection establishment library for MirageOS"
