--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -9,7 +9,7 @@ homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.07.0"}
-  "dune" {>= "2.0"}
+  "dune"
   "base-unix"
   "logs"
   "ppx_sexp_conv" {>="v0.13.0"}
@@ -25,11 +25,11 @@ depends: [
 ]
 depopts: ["tls" "lwt_ssl" "launchd"]
 conflicts: [
-  "tls" {< "0.14.0"}
+  "tls" {< "0.13.0"}
   "ssl" {< "0.5.9"}
 ]
 build: [
-  ["dune" "subst"] {dev}
+  ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
 ]
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
