--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -7,7 +7,7 @@ homepage: "https://github.com/mirage/ocaml-conduit"
 bug-reports: "https://github.com/mirage/ocaml-conduit/issues"
 depends: [
   "ocaml" {>= "4.07.0"}
-  "dune" {>= "2.0"}
+  "dune"
   "ppx_sexp_conv" {>="v0.13.0"}
   "sexplib"
   "uri" {>= "4.0.0"}
@@ -34,7 +34,7 @@ conflicts: [
 ]
 
 build: [
-  ["dune" "subst"] {dev}
+  ["dune" "subst"] {pinned}
   ["dune" "build" "-p" name "-j" jobs]
   ["dune" "runtest" "-p" name] {with-test}
 ]
