--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -28,6 +28,7 @@ depends: [
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
   "tcpip" {with-test}
+  "fmt" {>= "0.8.7"}
 ]
 conflicts: [
   "mirage-conduit"
