conduit-mirage: adapt to mirage-stack deprecation, use tcpip instead

--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -12,7 +12,6 @@ depends: [
   "sexplib"
   "uri" {>= "4.0.0"}
   "cstruct" {>= "3.0.0"}
-  "mirage-stack" {>= "2.2.0"}
   "mirage-clock" {>= "3.0.0"}
   "mirage-flow" {>= "2.0.0"}
   "mirage-flow-combinators" {>= "2.0.0"}
@@ -27,7 +26,7 @@ depends: [
   "ca-certs-nss"
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
-  "tcpip" {with-test}
+  "tcpip" {>= "6.0.0"}
   "fmt" {>= "0.8.7"}
 ]
 conflicts: [
