conduit-lwt-unix: update to tls 0.16 package (now it is tls-lwt, no more tls.lwt) conduit-mirage: update to dns-client 7.0.0 package (dns-client-mirage instead of dns-client.mirage)

--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -23,9 +23,9 @@ depends: [
   "ssl" {with-test}
   "lwt_ssl" {with-test}
 ]
-depopts: ["tls" "lwt_ssl" "launchd"]
+depopts: ["tls-lwt" "lwt_ssl" "launchd"]
 conflicts: [
-  "tls" {< "0.14.0"}
+  "tls-lwt" {< "0.16.0"}
   "ssl" {< "0.5.12"}
 ]
 build: [
