Switch to sexplib0 for lighter dependencies
`sexplib0` only depends on `ocaml` and `dune`. It contains the type
definition and some conversion functions. `conduit` does not use
anything else (like a parser, etc) so it can use it.
(`sexplib` already depends on `sexplib0` so it's using the same types
under the hood)

The corresponding bits are:
- `sexplib` (opam package and library) -> `sexplib0`
- `Sexplib.Conv` (module) -> `Sexplib0.Sexp_conv`
- `Sexplib.Std` -> `Sexplib0.Sexp_conv` (we only need these bits)
- `Sexplib.Sexp.to_string_hum` -> `Sexplib0.Sexp.to_string_hum`

--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -14,7 +14,7 @@ depends: [
   "uri" {>= "4.0.0"}
   "ppx_here" {>= "v0.9.0"}
   "ppx_sexp_conv" {>="v0.13.0"}
-  "sexplib"
+  "sexplib0"
   "conduit" {=version}
   "async" {>= "v0.15.0"}
   "ipaddr" {>= "3.0.0"}
