--- a/conduit-lwt.opam
+++ b/conduit-lwt.opam
@@ -12,7 +12,7 @@ depends: [
   "dune" {>= "2.0"}
   "base-unix"
   "ppx_sexp_conv" {>="v0.13.0"}
-  "sexplib"
+  "sexplib0"
   "conduit" {=version}
   "lwt" {>= "3.0.0"}
 ]
