--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -9,7 +9,7 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "2.0"}
   "ppx_sexp_conv" {>="v0.13.0"}
-  "sexplib"
+  "sexplib0"
   "uri" {>= "4.0.0"}
   "cstruct" {>= "3.0.0"}
   "mirage-clock" {>= "3.0.0"}
