--- a/src/conduit/dune
+++ b/src/conduit/dune
@@ -5,7 +5,7 @@
  (preprocess
   (pps ppx_sexp_conv))
  (modules conduit conduit_trie resolver)
- (libraries sexplib ipaddr ipaddr-sexp uri astring))
+ (libraries sexplib0 ipaddr ipaddr-sexp uri astring))
 
 (documentation
  (package conduit))
