--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,10 +6,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        ocaml-compiler: ["4.11", "4.12", "4.13", "4.14"]
-        exclude:
-          - os: macos-latest
-            ocaml-compiler: "4.11"
+        ocaml-compiler: ["4.13", "4.14", "5.2"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
