--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -15,14 +15,14 @@ depends: [
   "mirage-clock" {>= "3.0.0"}
   "mirage-flow" {>= "4.0.0"}
   "mirage-flow-combinators" {>= "2.0.0"}
-  "mirage-random" {>= "2.0.0"}
+  "mirage-crypto-rng-mirage" {>= "1.0.0"}
   "mirage-time" {>= "2.0.0"}
   "dns-client-mirage" {>= "8.0.0"}
   "conduit-lwt" {=version}
   "vchan" {>= "5.0.0"}
   "xenstore"
-  "tls" {>= "0.11.0"}
-  "tls-mirage" {>= "0.17.4"}
+  "tls" {>= "1.0.0"}
+  "tls-mirage" {>= "1.0.0"}
   "ca-certs-nss"
   "ipaddr" {>= "3.0.0"}
   "ipaddr-sexp"
