--- a/conduit-async.opam
+++ b/conduit-async.opam
@@ -30,3 +30,4 @@ build: [
 ]
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
 synopsis: "A network connection establishment library for Async"
+x-maintenance-intent: [ "(latest)" ]
