--- a/conduit-lwt-unix.opam
+++ b/conduit-lwt-unix.opam
@@ -34,3 +34,4 @@ build: [
 ]
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
 synopsis: "A network connection establishment library for Lwt_unix"
+x-maintenance-intent: [ "(latest)" ]
