--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -40,3 +40,4 @@ build: [
 ]
 dev-repo: "git+https://github.com/mirage/ocaml-conduit.git"
 synopsis: "A network connection establishment library for MirageOS"
+x-maintenance-intent: [ "(latest)" ]
