--- a/conduit-mirage.opam
+++ b/conduit-mirage.opam
@@ -12,11 +12,12 @@ depends: [
   "sexplib0"
   "uri" {>= "4.0.0"}
   "cstruct" {>= "3.0.0"}
-  "mirage-clock" {>= "3.0.0"}
+  "mirage-ptime" {>= "4.0.0"}
+  "mirage-mtime" {>= "4.0.0"}
   "mirage-flow" {>= "4.0.0"}
   "mirage-flow-combinators" {>= "2.0.0"}
-  "mirage-crypto-rng-mirage" {>= "1.0.0"}
-  "mirage-time" {>= "2.0.0"}
+  "mirage-crypto-rng-mirage2" {>= "1.0.0"}
+  "mirage-sleep" {>= "4.0.0"}
   "dns-client-mirage" {>= "8.0.0"}
   "conduit-lwt" {=version}
   "vchan" {>= "5.0.0"}
