--- a/src/conduit-mirage/dune
+++ b/src/conduit-mirage/dune
@@ -5,7 +5,7 @@
   (pps ppx_sexp_conv))
  (modules conduit_mirage resolver_mirage conduit_xenstore)
  (wrapped false)
- (libraries conduit conduit-lwt tcpip mirage-clock mirage-crypto-rng-mirage
-   mirage-time mirage-flow mirage-flow-combinators dns-client-mirage
-   ipaddr-sexp vchan tls tls-mirage xenstore.client uri.services ca-certs-nss
-   fmt))
+ (libraries conduit conduit-lwt tcpip mirage-mtime mirage-ptime
+   mirage-crypto-rng mirage-sleep mirage-flow mirage-flow-combinators
+   dns-client-mirage ipaddr-sexp vchan tls tls-mirage xenstore.client
+   uri.services ca-certs-nss fmt))
